--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>My Wiki Page</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a class="nav-link" href="">HOME</a>
+            <a class="nav-link" href="">PAGE1</a>
+            <a class="nav-link" href="">PAGE2</a>
+            <a class="nav-link" href="">PAGE3</a>
+        </nav>
+    </header>
 </body>
 </html>
