basic navigation layout
colors and positioning.
current tab highlight.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a class="nav-link" href="">HOME</a>
+            <a id="current-tab" class="nav-link" href="">HOME</a>
             <a class="nav-link" href="">PAGE1</a>
             <a class="nav-link" href="">PAGE2</a>
             <a class="nav-link" href="">PAGE3</a>
