--- a/page2.html
+++ b/page2.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <nav>
-            <a id="current-tab" class="nav-link" href="">HOME</a>
+            <a class="nav-link" href="index.html">HOME</a>
             <a class="nav-link" href="page1.html">PAGE1</a>
-            <a class="nav-link" href="page2.html">PAGE2</a>
+            <a id="current-tab" class="nav-link" href="">PAGE2</a>
             <a class="nav-link" href="page3.html">PAGE3</a>
         </nav>
     </header>
