--- a/page1.html
+++ b/page1.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <nav>
-            <a id="current-tab" class="nav-link" href="">HOME</a>
-            <a class="nav-link" href="page1.html">PAGE1</a>
+            <a class="nav-link" href="index.html">HOME</a>
+            <a id="current-tab" class="nav-link" href="">PAGE1</a>
             <a class="nav-link" href="page2.html">PAGE2</a>
             <a class="nav-link" href="page3.html">PAGE3</a>
         </nav>
