basic home content

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <a class="nav-link" href="page3.html">PAGE3</a>
         </nav>
     </header>
-    
+    <section>
+        <hr>
+        <h1>MOTOR MANIA</h1>
+        <hr>
+    </section>
 </body>
 </html>
