add car animation and nav names

--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a class="nav-link" href="index.html">HOME</a>
-            <a id="current-tab" class="nav-link" href="">PAGE1</a>
+            <a id="current-tab" class="nav-link" href="">MEDIA</a>
             <a class="nav-link" href="page2.html">PAGE2</a>
             <a class="nav-link" href="page3.html">PAGE3</a>
         </nav>
