--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a id="current-tab" class="nav-link" href="">HOME</a>
-            <a class="nav-link" href="page1.html">PAGE1</a>
+            <a class="nav-link" href="page1.html">MEDIA</a>
             <a class="nav-link" href="page2.html">PAGE2</a>
             <a class="nav-link" href="page3.html">PAGE3</a>
         </nav>
@@ -19,10 +19,12 @@
         <hr>
         <h1>MOTOR MANIA</h1>
         <hr>
-        <!-- <img class="home-art" src="race-car-art.png" alt="race car art"> -->
         <p class="home-p">Praesent ultricies pretium ligula ut gravida. Aliquam erat volutpat. Sed orci urna, consequat at neque eget, blandit pellentesque mauris. Etiam pharetra tempus elementum. Quisque vulputate dictum ipsum vitae faucibus. Praesent vitae est ut risus pellentesque sodales tempus a libero. Quisque nec elit nec tellus vulputate blandit sed nec neque. Sed eleifend lectus purus, vel porta lacus convallis in. Nunc quis enim non libero aliquam aliquam. Nulla sit amet justo imperdiet, iaculis ex eget, ultricies ligula. Curabitur congue, nisl in sodales ornare, tellus odio facilisis leo, ac elementum ex lorem ac augue. Sed semper faucibus massa ullamcorper ultricies. Maecenas id tristique elit.</p>
-        <!-- <img class="home-art" src="race-car-art.png" alt="race car art"> -->
+        <img class="home-art" src="race-car-art.png" alt="race car art">
         
     </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
