--- a/page3.html
+++ b/page3.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a class="nav-link" href="index.html">HOME</a>
-            <a class="nav-link" href="page1.html">PAGE1</a>
+            <a class="nav-link" href="page1.html">MEDIA</a>
             <a class="nav-link" href="page2.html">PAGE2</a>
             <a id="current-tab" class="nav-link" href="page3.html">PAGE3</a>
         </nav>
