--- a/page2.html
+++ b/page2.html
@@ -15,6 +15,9 @@
             <a class="nav-link" href="page3.html">PAGE3</a>
         </nav>
     </header>
-    
+    <section></section>
+    <footer>
+        <hr>
+    </footer>
 </body>
 </html>
