--- a/page1.html
+++ b/page1.html
@@ -15,7 +15,12 @@
             <a class="nav-link" href="page3.html">PAGE3</a>
         </nav>
     </header>
-    <section></section>
+    <section>
+        <div class="media-video">
+            <h1>viper</h1>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/PUodFjt01CY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </section>
     <footer>
         <hr>
     </footer>
