--- a/page1.html
+++ b/page1.html
@@ -20,6 +20,13 @@
             <h1>viper</h1>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/PUodFjt01CY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <div class="tiles-container">
+            <img class="logo" src="logos/Alfa-Romeo.png" alt="Alfa Romeo">
+            <img class="logo" src="logos/Audi.png" alt="Audi">
+            <img class="logo" src="logos/mazarati.png" alt="mazarati">
+            <img class="logo" src="logos/mercedes-benz.png" alt="Mercedes Benz">
+            <img class="logo" src="logos/Ferrari.png" alt="Ferrari">
+        </div>
     </section>
     <footer>
         <hr>
