rename pages & tabs

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <a id="current-tab" class="nav-link" href="">HOME</a>
-            <a class="nav-link" href="page1.html">MEDIA</a>
-            <a class="nav-link" href="page2.html">PAGE2</a>
-            <a class="nav-link" href="page3.html">PAGE3</a>
+            <a class="nav-link" href="media.html">MEDIA</a>
+            <a class="nav-link" href="products.html">PRODUCTS</a>
+            <a class="nav-link" href="contact.html">CONTACT</a>
         </nav>
     </header>
     <section>
