--- a/products.html
+++ b/products.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <a class="nav-link" href="index.html">HOME</a>
-            <a class="nav-link" href="page1.html">MEDIA</a>
-            <a id="current-tab" class="nav-link" href="">PAGE2</a>
-            <a class="nav-link" href="page3.html">PAGE3</a>
+            <a class="nav-link" href="media.html">MEDIA</a>
+            <a id="current-tab" class="nav-link" href="">PRODUCTS</a>
+            <a class="nav-link" href="contact.html">CONTACT</a>
         </nav>
     </header>
     <section></section>
