--- a/media.html
+++ b/media.html
@@ -11,8 +11,8 @@
         <nav>
             <a class="nav-link" href="index.html">HOME</a>
             <a id="current-tab" class="nav-link" href="">MEDIA</a>
-            <a class="nav-link" href="page2.html">PAGE2</a>
-            <a class="nav-link" href="page3.html">PAGE3</a>
+            <a class="nav-link" href="products.html">PRODUCTS</a>
+            <a class="nav-link" href="contact.html">CONTACT</a>
         </nav>
     </header>
     <section>
