add grid and content
add grid and car photos to products page. media query change grid layout.

--- a/products.html
+++ b/products.html
@@ -15,7 +15,31 @@
             <a class="nav-link" href="contact.html">CONTACT</a>
         </nav>
     </header>
-    <section></section>
+    <section>
+        <hr>
+        <h1><u>Our Products</u></h1>
+        <div class="grid-container">
+            <div id="item11" class="grid-item">
+                <img class="grid-img" src="products/alfa-romeo-giulia.jpg" alt="alfa-romeo-giulia">
+            </div>
+            <div id="item12" class="grid-item">
+                <img class="grid-img" src="products/bugatti-chiron.jpg" alt="bugatti-chiron">
+            </div>
+            <div id="item13" class="grid-item">
+                <img class="grid-img" src="products/audi-r8.jpg" alt="audi-r8">
+            </div>
+            <div id="item21" class="grid-item">
+                <img class="grid-img" src="products/chevrolet-camaro.jfif" alt="chevrolet-camaro">
+            </div>
+            <div id="item22" class="grid-item">
+                <img class="grid-img" src="products/honda-civic-type-R.jpg" alt="honda-civic-type-R">
+            </div>
+            <div id="item23" class="grid-item">
+                <img class="grid-img" src="products/maserati-nettuno.jpg" alt="maserati-nettuno">
+            </div>
+
+        </div>
+    </section>
     <footer>
         <hr>
     </footer>
