add footer content
text and profile links

--- a/media.html
+++ b/media.html
@@ -30,6 +30,13 @@
     </section>
     <footer>
         <hr>
+        <div class="tiles-container" id="profile-container">
+            <img class="avatar" src="OwlAvatar.jpg" alt="avatar">
+            <p id="footer-copyright"><em>This site is the work of <s>Alon Tzafari</s> an owl.</em></p>
+            <a class="profile-link" href="https://github.com/AlonTzafari">GitHub</a>
+            <a class="profile-link" href="https://www.freecodecamp.org/alontzafari">FCC</a>
+            <a class="profile-link" href="https://www.instagram.com/alontzafari/">Instagram</a>
+        </div>
     </footer>
 </body>
 </html>
