--- a/media.html
+++ b/media.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Wiki Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -33,9 +34,9 @@
         <div class="tiles-container" id="profile-container">
             <img class="avatar" src="OwlAvatar.jpg" alt="avatar">
             <p id="footer-copyright"><em>This site is the work of <s>Alon Tzafari</s> an owl.</em></p>
-            <a class="profile-link" href="https://github.com/AlonTzafari">GitHub</a>
-            <a class="profile-link" href="https://www.freecodecamp.org/alontzafari">FCC</a>
-            <a class="profile-link" href="https://www.instagram.com/alontzafari/">Instagram</a>
+            <a class="profile-link" href="https://github.com/AlonTzafari"><i class="fa fa-github" aria-hidden="true"></i>GitHub</a>
+            <a class="profile-link" href="https://www.freecodecamp.org/alontzafari"><i class="fa fa-free-code-camp" aria-hidden="true"></i>FCC</a>
+            <a class="profile-link" href="https://www.instagram.com/alontzafari/"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a>
         </div>
     </footer>
 </body>
