fix iframe sizing

--- a/media.html
+++ b/media.html
@@ -19,7 +19,7 @@
     <section>
         <div class="media-video">
             <h1>viper</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/PUodFjt01CY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="yt-embed"  src="https://www.youtube.com/embed/PUodFjt01CY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="tiles-container">
             <img class="logo" src="logos/Alfa-Romeo.png" alt="Alfa Romeo">
